# projekt-cpp-Krupa4-Kleczkowski4-crazy-hamster-little-shooter

./: CMakeLists.txt  LICENSE  README.md  main.cpp
cmake_modules/: FindSFML.cmake
images/: diagram
